--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@total-typescript/ts-reset": "^0.4.2",
+    "@types/jest": "^29.5.3",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
@@ -99,7 +100,7 @@
     "semantic-release": "^21.0.1",
     "storybook": "^7.0.5",
     "tailwindcss": "^3.2.7",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.1.1",
     "tsc": "^2.0.4",
     "typescript": "5.1.3",
     "vitest": "^0.32.0"
